--- a/tracking/templates/tracking/track.html
+++ b/tracking/templates/tracking/track.html
@@ -2,6 +2,7 @@
 {% load static %}
 {% load i18n %}
 {% load dict_filters %}
+{% load custom_filters %}
 
 {% block title %}{% trans "تتبع الشحنة" %} - عَبَق{% endblock %}
 
