--- a/orders/templates/orders/my_orders.html
+++ b/orders/templates/orders/my_orders.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 {% load i18n %}
+{% load custom_filters %}
 
 {% block title %}{% trans "طلباتي" %} - عَبَق{% endblock %}
 
