--- a/templates/base.html
+++ b/templates/base.html
@@ -161,6 +161,10 @@
                     </a>
 
                     {% if user.is_authenticated %}
+                    <a href="{% url 'orders:profile' %}"
+                        class="text-gray-700 hover:text-purple-600 transition font-semibold">
+                        <i class="fas fa-user"></i> {% trans "الملف الشخصي" %}
+                    </a>
                     <a href="{% url 'orders:my_orders' %}"
                         class="text-gray-700 hover:text-purple-600 transition font-semibold">
                         <i class="fas fa-box"></i> {% trans "طلباتي" %}
@@ -232,6 +236,9 @@
                     <i class="fas fa-truck"></i> {% trans "تتبع الشحنة" %}
                 </a>
                 {% if user.is_authenticated %}
+                <a href="{% url 'orders:profile' %}" class="block py-2 text-gray-700 hover:text-purple-600">
+                    <i class="fas fa-user"></i> {% trans "الملف الشخصي" %}
+                </a>
                 <a href="{% url 'orders:my_orders' %}" class="block py-2 text-gray-700 hover:text-purple-600">
                     <i class="fas fa-box"></i> {% trans "طلباتي" %}
                 </a>
